# dependency-graph-mcp

./: CMakeLists.txt  README.md
src/: dependency_graph.cpp  dependency_graph.h  dependency_graph_tools.cpp  main.cpp
tests/: CMakeLists.txt  test_dependency_graph.cpp
